dummy details updated

--- a/src/app/enterprisebroadband/enterprisebroadband.component.html
+++ b/src/app/enterprisebroadband/enterprisebroadband.component.html
@@ -1,47 +1,52 @@
 <div class="boxed_wrapper">
 
-    <div class="preloader"></div>
-    
-    
-    <!--Start breadcrumb area-->     
-    <section class="breadcrumb-area" style="background-image:url(assets/images/resources/services_banner.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="inner-content text-center clearfix">
-                        <div class="breadcrumb-menu">
-                            <ul class="clearfix">
-                                <li><a href="index.html">Home</a></li>
-                                <li class="active">Services - Enterprise Broadband</li>
-                            </ul>    
-                        </div>
-                        <div class="title">
-                           <h1>Services - Enterprise Broadband</h1>
-                        </div>
-                    </div>
-                </div>
+  <div class="preloader"></div>
+
+
+  <!--Start breadcrumb area-->
+  <section class="breadcrumb-area" style="background-image:url(assets/images/resources/services_banner.jpg);">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="inner-content text-center clearfix">
+            <div class="breadcrumb-menu">
+              <ul class="clearfix">
+                <li><a href="index.html">Home</a></li>
+                <li class="active">Services - Enterprise Broadband</li>
+              </ul>
             </div>
+            <div class="title">
+              <h1>Services - Enterprise Broadband</h1>
+            </div>
+          </div>
         </div>
-    </section>
-    <!--End breadcrumb area-->
-    
-    
-    
-    <!--Start choose-area-->
-    <section class="choose-area secpd1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-6">
-                    <div class="choose-content-box">
-                        <div class="sec-title">
-                            <!-- <h6>About</h6> -->
-                            <div class="title">Enterprise Broadband</div>
-                        </div>
-                        <div class="inner-content">
-                            <div class="text">
-                                <!-- <p class="m-0">Broadband is at the heart of modern communications, and at SCUD we understand you need a broadband connectivity that’s powerful and cost-effective. SCUD isn’t just an easy way of providing your customers with a better online experience, it’s the enabler for selling them exciting next generation solutions and services.</p> -->
-                            </div>
-                            <ul>
+      </div>
+    </div>
+  </section>
+  <!--End breadcrumb area-->
+
+
+
+  <!--Start choose-area-->
+  <section class="choose-area secpd1">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-6">
+          <div class="choose-content-box">
+            <div class="sec-title">
+              <!-- <h6>About</h6> -->
+              <div class="title">Enterprise Broadband</div>
+            </div>
+            <div class="inner-content">
+              <div class="text">
+                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+              <!-- <ul>
                                 <li>
                                     <p>We specialise in providing Carrier Class Internet Bandwidth with lowest latency across all the continents across the globe.</p>
                                 </li>
@@ -54,41 +59,42 @@
                                 <li>
                                     <p>Services are backed by SLA Agreement. </p>
                                 </li>
-                            </ul>
-                            <p>For more details contact us at corporatesales@gbps.net.in</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="choose-image-box">
-                        <img src="assets/images/resources/services_sec.jpg" alt="Awesome Image">
-                    </div>
-                </div>
+                            </ul> -->
+              <p>For more details contact us at corporate@faps.net.in</p>
             </div>
+          </div>
         </div>
-    </section>
-    <!--End choose-area-->
-      
-    <!--Start slogan area-->
-    <section class="slogan-area text-center" style="background-image:url(assets/images/parallax-background/services_parallax.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="inner-content fix wow fadeInUp" data-wow-delay="100ms">
-                        <div class="title">
-                            <h1>When it Comes to Switching,<br> We're Fast. Superfast.</h1>
-                        </div>
-                        <div class="button">
-                            <a class="btn-one" routerLink="/contact" href="/contact">Switch to GBPS</a>
-                        </div>
-                    </div>
-                </div>    
+        <div class="col-xl-6">
+          <div class="choose-image-box">
+            <img src="assets/images/resources/services_sec.jpg" alt="Awesome Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--End choose-area-->
+
+  <!--Start slogan area-->
+  <section class="slogan-area text-center"
+    style="background-image:url(assets/images/parallax-background/services_parallax.jpg);">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="inner-content fix wow fadeInUp" data-wow-delay="100ms">
+            <div class="title">
+              <h1>When it Comes to Switching,<br> We're Fast. Superfast.</h1>
             </div>
+            <div class="button">
+              <a class="btn-one" routerLink="/contact" href="/contact">Switch to FAPS</a>
+            </div>
+          </div>
         </div>
-    </section>           
-    <!--End slogan area-->  
-      
-    
-      
-    
-    </div>  
+      </div>
+    </div>
+  </section>
+  <!--End slogan area-->
+
+
+
+
+</div>
