--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,96 +1,103 @@
-<!-- Start Top Bar style1 -->  
+<!-- Start Top Bar style1 -->
 <section class="top-bar-style1">
-    <div class="border-box">
-        <div class="border-1"></div>    
-        <div class="border-2"></div>    
-        <div class="border-3"></div>
-            
-        <div class="border-4"></div>
-        <div class="border-5"></div>
-        <div class="border-6"></div>
-            
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-12 col-lg-12 col-md-12">
-                <div class="top-style1 clearfix">
-                    <div class="top-left-style1 float-left clearfix">
-                        <ul class="top-contact-info fix">
-                            <li></li>
-                            <li><span class="flaticon-auricular-phone-symbol-in-a-circle"></span>Call Now 020 6780 9191</li>
-                        </ul>
-                    </div>
-                    <div class="top-right-style1 float-right">
-                        <ul class="sociallinks-style-one float-left fix">
-                            <li><a target="_blank" href="https://www.facebook.com/gbpsbroadbandpune"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a target="_blank" href="https://twitter.com/GbpsLtd"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <!-- <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+  <div class="border-box">
+    <div class="border-1"></div>
+    <div class="border-2"></div>
+    <div class="border-3"></div>
+
+    <div class="border-4"></div>
+    <div class="border-5"></div>
+    <div class="border-6"></div>
+
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12">
+        <div class="top-style1 clearfix">
+          <div class="top-left-style1 float-left clearfix">
+            <ul class="top-contact-info fix">
+              <li></li>
+              <li><span class="flaticon-auricular-phone-symbol-in-a-circle"></span>Call Now 020 6780 9191</li>
+            </ul>
+          </div>
+          <div class="top-right-style1 float-right">
+            <ul class="sociallinks-style-one float-left fix">
+              <li><a target="_blank" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <!-- <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li> -->
-                        </ul>
-                    </div>
-                </div>    
-            </div>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
-<!-- End Top Bar style1 -->  
+<!-- End Top Bar style1 -->
 
 <!--Start Main Header-->
 <header class="main-header stricky">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-12">
-                <div class="main-box">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div class="logo-box position-absolute">
-                            <a href="index.html" class="p-1 bg-white rounded">
-                                <img src="assets/images/resources/logo.png" alt="Awesome Logo" width="70px">
-                            </a>
-                        </div>
-                        <div class=""></div>
-                        <div class=" w-75 d-flex justify-content-between py-1">
-                            <div class="nav-outer clearfix">
-                                <nav class="main-menu clearfix pl-0">
-                                    <div class="navbar-header clearfix">   	
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                        </button>
-                                    </div>
-                                    <div class="navbar-collapse collapse clearfix">
-                                        <ul class="navigation clearfix">
-                                            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="home" >Home</a>
-                                            </li>
-                                            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="about">About</a>
-                                            </li>
-                                            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="whygbps">Why GBPS</a>
-                                            </li>
-                                            <li class="dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="homebroadband">Services</a>
-                                                <ul>
-                                                    <li><a routerLink="homebroadband">Home Broadband</a></li>
-                                                    <li><a routerLink="enterprisebroadband">Enterprise Broadband</a></li>
-                                                </ul>
-                                            </li>
-                                            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="packages">Packages</a></li>
-                                            
-                                            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="contact">Contact</a></li>
-                                        </ul>
-                                    </div>
-                                </nav>      
-                            </div>
-                            <div class="header-right clearfix">
-                                <div class="button">
-                                    <a class="btn-one" href="https://myaccount.gbps.net.in" target="_blank"><span class="flaticon-user mr-2"></span>Customer Sign In</a>
-                                </div>
-                            </div>  
-                        </div>
-                        
-                        
-                    </div>
-                </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="main-box">
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="logo-box position-absolute">
+              <a href="index.html" class="px-2 py-1 bg-white rounded">
+                <img src="assets/images/resources/logo.png" alt="Awesome Logo" width="100px">
+              </a>
             </div>
+            <div class=""></div>
+            <div class=" w-75 d-flex justify-content-between py-1">
+              <div class="nav-outer clearfix">
+                <nav class="main-menu clearfix pl-0">
+                  <div class="navbar-header clearfix">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                  </div>
+                  <div class="navbar-collapse collapse clearfix">
+                    <ul class="navigation clearfix">
+                      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="home">Home</a>
+                      </li>
+                      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="about">About</a>
+                      </li>
+                      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="whyFAPS">Why FAPS</a>
+                      </li>
+                      <li class="dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="homebroadband">Services</a>
+                        <ul>
+                          <li><a routerLink="homebroadband">Home Broadband</a></li>
+                          <li><a routerLink="enterprisebroadband">Enterprise Broadband</a></li>
+                        </ul>
+                      </li>
+                      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="packages">Packages</a></li>
+
+                      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a
+                          routerLink="contact">Contact</a></li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
+              <div class="header-right clearfix">
+                <div class="button">
+                  <a class="btn-one" href="#" target="_blank"><span class="flaticon-user mr-2"></span>Customer Sign
+                    In</a>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </header>
-<!--End Main Header-->  
+<!--End Main Header-->
