--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -120,7 +120,7 @@
                             <h1>When it Comes to Switching,<br> We're Fast. Superfast.</h1>
                         </div>
                         <div class="button">
-                            <a class="btn-one" routerLink="/contact">Switch to GBPS</a>
+                            <a class="btn-one" routerLink="/contact">Switch to FAPS</a>
                         </div>
                     </div>
                 </div>    
