--- a/src/app/whygbps/whygbps.component.html
+++ b/src/app/whygbps/whygbps.component.html
@@ -1,53 +1,53 @@
 <div class="boxed_wrapper">
 
-    <div class="preloader"></div>
-    
-    
-    <!--Start breadcrumb area-->     
-    <section class="breadcrumb-area" style="background-image:url(assets/images/resources/whygbps_banner.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="inner-content text-center clearfix">
-                        <div class="breadcrumb-menu">
-                            <ul class="clearfix">
-                                <li><a href="index.html">Home</a></li>
-                                <li class="active">Why GBPS</li>
-                            </ul>    
-                        </div>
-                        <div class="title">
-                           <h1>Why GBPS?</h1>
-                        </div>
-                    </div>
-                </div>
+  <div class="preloader"></div>
+
+
+  <!--Start breadcrumb area-->
+  <section class="breadcrumb-area" style="background-image:url(assets/images/resources/whygbps_banner.jpg);">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="inner-content text-center clearfix">
+            <div class="breadcrumb-menu">
+              <ul class="clearfix">
+                <li><a href="index.html">Home</a></li>
+                <li class="active">Why FAPS</li>
+              </ul>
             </div>
+            <div class="title">
+              <h1>Why FAPS?</h1>
+            </div>
+          </div>
         </div>
-    </section>
-    <!--End breadcrumb area-->
-    
-    <!--Start choose-area-->
-    <section class="choose-area secpd1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-6">
-                    <div class="choose-content-box">
-                        <div class="sec-title">
-                            <h6>Why GBPS?</h6>
-                            <div class="title">Ultra fast and Ultra<br> Reliable</div>
-                        </div>
-                        <div class="inner-content">
-                            <div class="text">
-                                <p class="m-0">GBPS provides unique value proposition to its clients by offering the services which are </p>
-                                    <ul>
-                                        <li>Uncompetitive Prices </li>
-                                        <li>Entertainment bundled with loads of OTT Subscriptions #Content Providers#</li>
-                                        <li>Bundled with Telephony along with unlimited Local & STD calling LANDLINE</li>
-                                        <li>Delivered on state=of-art Fiber to Home (FTTH) Technology.</li>
-                                        <li>Omni Channel support using IVRS, Facebook, Twitter, Whatsapp, Email and Android APP.</li>
-                                    </ul>
-                                   <p>Over all it becomes a perfect value proposition for our clients.</p>
-                            </div>
-                            <!-- <ul>
+      </div>
+    </div>
+  </section>
+  <!--End breadcrumb area-->
+
+  <!--Start choose-area-->
+  <section class="choose-area secpd1">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-6">
+          <div class="choose-content-box">
+            <div class="sec-title">
+              <h6>Why FAPS?</h6>
+              <div class="title">Ultra fast and Ultra<br> Reliable</div>
+            </div>
+            <div class="inner-content">
+              <div class="text">
+                <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. </p>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet</li>
+                  <li>Lorem ipsum amet</li>
+                  <li>Lorem ipsum dolor </li>
+                </ul>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              </div>
+              <!-- <ul>
                                 <li>
                                     <h1>99.98%</h1>
                                     <span>Reliable</span>
@@ -57,19 +57,19 @@
                                     <span>Faster</span>
                                 </li>
                             </ul> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="choose-image-box">
-                        <img src="assets/images/resources/whygbps_sec.jpg" alt="Awesome Image">
-                    </div>
-                </div>
             </div>
+          </div>
         </div>
-    </section>
-    <!--End choose-area-->
-      
-    
-    
-    </div>  
+        <div class="col-xl-6">
+          <div class="choose-image-box">
+            <img src="assets/images/resources/whygbps_sec.jpg" alt="Awesome Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--End choose-area-->
+
+
+
+</div>
